--- a/Torrent2GoogleDrive.ipynb
+++ b/Torrent2GoogleDrive.ipynb
@@ -13,103 +13,6 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "e645e9c5acf342e6be0a77f418468990": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatSliderModel",
-          "state": {
-            "_view_name": "FloatSliderView",
-            "style": "IPY_MODEL_2acca7fe236b43f98f617fd9650e1e33",
-            "_dom_classes": [],
-            "description": "Now You See Me 2 (2016) [1080p] [YTS.AG] 2831.18 kB/s downloading",
-            "step": 0.01,
-            "_model_name": "FloatSliderModel",
-            "orientation": "horizontal",
-            "max": 100,
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": 99.95539784431458,
-            "_view_count": null,
-            "disabled": true,
-            "_view_module_version": "1.5.0",
-            "min": 0,
-            "continuous_update": true,
-            "readout_format": ".2f",
-            "description_tooltip": null,
-            "readout": true,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_36db57c1bd4647efa20ae0e03cca521f"
-          }
-        },
-        "2acca7fe236b43f98f617fd9650e1e33": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "SliderStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "handle_color": null,
-            "_model_name": "SliderStyleModel",
-            "description_width": "initial",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "36db57c1bd4647efa20ae0e03cca521f": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": "auto",
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -120,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/VuBrian22/Torrent-to-Google-Drive-/blob/main/Torrent2GoogleDrive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/VuBrian22/Torrent-to-Google-Drive/blob/main/Torrent2GoogleDrive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -136,6 +39,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "t3NGw1GuyNhe"
+      },
+      "source": [
+        "## **Optional: Run an Internet Speed Test (Hosted by Speedtest by Ookla)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dGMZnQ4swLKk"
+      },
+      "source": [
+        "pip install speedtest-cli && speedtest-cli"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "avwfXH0q96Cz"
       },
       "source": [
@@ -147,7 +70,7 @@
       "metadata": {
         "cellView": "form",
         "id": "U2avD1zRIlWA",
-        "outputId": "528b275e-40d1-4774-9a3b-ea62fd3e1c82",
+        "outputId": "52af49be-4a69-4e40-aafd-54cdb689924b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -169,7 +92,7 @@
         "    pass\n",
         "  get_ipython().system_raw(\"rm -rf /root/.config/Google/DriveFS\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,12 +116,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "m6hF0emftx4h",
-        "cellView": "form",
-        "outputId": "85f1abc7-5fdf-4de6-c8b3-cc9c8200e043",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "cellView": "form"
       },
       "source": [
         "#@title\n",
@@ -221,16 +139,8 @@
         "print(\"Server Started Successfully\")\n",
         "\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Server Started Successfully\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -257,7 +167,7 @@
       "metadata": {
         "id": "0et2A6N3udA0",
         "cellView": "form",
-        "outputId": "5ad218ee-8b0f-4bb8-e4cd-05ca89b71d5a",
+        "outputId": "3de798b3-a843-4e0f-ae83-b2f2c8b890b1",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -294,16 +204,16 @@
         "}\n",
         "downloads.append(ses.add_torrent(params))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3457c500-43f1-4280-8ee4-f5c054f121f2\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-50ff3615-1b85-40a8-8219-ba17ecebd9b9\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3457c500-43f1-4280-8ee4-f5c054f121f2\">\n",
+              "     <output id=\"result-50ff3615-1b85-40a8-8219-ba17ecebd9b9\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -320,7 +230,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving Now You See Me 2 (2016) [1080p] [BluRay] [YTS.MX].torrent to Now You See Me 2 (2016) [1080p] [BluRay] [YTS.MX].torrent\n"
+            "Saving 7DD1F34921B46691E91F290CBE4587481DD2137F.torrent to 7DD1F34921B46691E91F290CBE4587481DD2137F.torrent\n"
           ],
           "name": "stdout"
         }
@@ -330,7 +240,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "Cwi1GMlxy3te",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "17b6c7d1-ced0-4671-9a7d-ca57d7147591",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        }
       },
       "source": [
         "#@title\n",
@@ -350,7 +265,16 @@
         "    )\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter Magnet Link Or Type Exit: magnet:?xt=urn:btih:B835DAEAF1EBD6C7E28D541F79926D6A6779AF42&dn=DOOM+Eternal+%28%2B+DLC%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+24.6+GB%5D&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969&tr=udp%3A%2F%2F9.rarbg.me%3A2720%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2800%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.piratepublic.com%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337&tr=udp%3A%2F%2F9.rarbg.com%3A2710%2Fannounce&tr=udp%3A%2F%2Fexplodie.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker1.wasabii.com.tw%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce\n",
+            "Enter Magnet Link Or Type Exit: exit\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -374,7 +298,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
+        "cellView": "both",
         "id": "qp5Va6shTTVX"
       },
       "source": [
@@ -408,7 +332,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
+        "cellView": "both",
         "id": "DmbhGmxLTXmo"
       },
       "source": [
@@ -450,17 +374,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "DBNoYYoSuDBT",
-        "cellView": "form",
-        "outputId": "08f6815a-f90f-400d-9468-d56363ebc5c2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34,
-          "referenced_widgets": [
-            "e645e9c5acf342e6be0a77f418468990",
-            "2acca7fe236b43f98f617fd9650e1e33",
-            "36db57c1bd4647efa20ae0e03cca521f"
-          ]
-        }
+        "cellView": "form"
       },
       "source": [
         "#@title\n",
@@ -515,32 +429,8 @@
         "            print(download.name(), \"complete\")\n",
         "    time.sleep(1)\n"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e645e9c5acf342e6be0a77f418468990",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "FloatSlider(value=0.0, disabled=True, layout=Layout(width='auto'), step=0.01, style=SliderStyle(description_wi…"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Now You See Me 2 (2016) [1080p] [YTS.AG] complete\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
